--- a/src/index.html
+++ b/src/index.html
@@ -48,9 +48,10 @@
 					<p>Наши мастера - профессионалы своего дела и не могут стоить дешево. К тому же, разве цена не дает определенный статус?</p>
 				</li>
 			</ul>
-
+		</section>
+		
 		<div class="index-colums">
-			</section class="news">
+			<section class="news">
 				<h2>Новости</h2>
 				<ul class="news-list">
 					<li class="news-item">
@@ -63,6 +64,7 @@
 					</li>
 				</ul>
 				<a class="button" href="news.html">Все новости</a>
+			</section>
 
 			<section class="gallery">
 				<h2>Фотогалерея</h2>
