--- a/src/index.html
+++ b/src/index.html
@@ -76,60 +76,62 @@
 			</section>
 		</div>
 
-		<section class="contacts"> 
-			<h2>Контактная информация</h2>
-			<p>
-				Барбершоп "Бородинский"<br>
-				Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
-				Телефон: +7(495)666-02-66
-			</p>
-			<p>
-				Время работы:<br>
-				Пн-Пт: с 10:00 до 22:00<br>
-				Сб-Вс: с 10:00 до 19:00
-			</p>
-			<a class="button" href="map.html">Как проехать</a>
-			<a class="button" href="contacts.html">Обратная связь</a>
-		</section>
+		<div class="index-colums">
+			<section class="contacts"> 
+				<h2>Контактная информация</h2>
+				<p>
+					Барбершоп "Бородинский"<br>
+					Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
+					Телефон: +7(495)666-02-66
+				</p>
+				<p>
+					Время работы:<br>
+					Пн-Пт: с 10:00 до 22:00<br>
+					Сб-Вс: с 10:00 до 19:00
+				</p>
+				<a class="button" href="map.html">Как проехать</a>
+				<a class="button" href="contacts.html">Обратная связь</a>
+			</section>
 
-		<section class="appointment">
-			<h2>Записаться</h2>
-			<p class="appointment-info">
-				Укажите желаемую дату и время и мы свяжемся
-				с Вами для подтверждения брони
-			</p>
-			<form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
+			<section class="appointment">
+				<h2>Записаться</h2>
+				<p class="appointment-info">
+					Укажите желаемую дату и время и мы свяжемся
+					с Вами для подтверждения брони
+				</p>
+				<form class="appointment-form" action="https://echo.htmlacademy.ru" method="post">
 
-				<p class="appointment-item">
-					<label for="appointment-date">Дата</label>
-					<input id="appointment-date" type="date" name="date" value="" placeholder="08.10.2017">
-				</p>
-				<p class="appointment-item">
-					<label for="appointment-time">Время</label>
-					<input id=t"appointment-time" type="text" name="time" value="" placeholder="10:00">
-				</p>
-				<p class="appointment-item">
-					<label for="appointment-name">Ваше имя</label>
-					<input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
-				</p>
-				<p class="appointment-item">
-					<label for="appointment-phone">Телефон</label>
-					<input id="appointment-phone" type="tel" name="phone" value="" placeholder="+3 8096 153 32 12">
-				</p>
-				<button class="button" type="submit">Отправить</button>
-
-			</form >
-		</section>
+					<p class="appointment-item">
+						<label for="appointment-date">Дата</label>
+						<input id="appointment-date" type="date" name="date" value="" placeholder="08.10.2017">
+					</p>
+					<p class="appointment-item">
+						<label for="appointment-time">Время</label>
+						<input id=t"appointment-time" type="text" name="time" value="" placeholder="10:00">
+					</p>
+					<p class="appointment-item">
+						<label for="appointment-name">Ваше имя</label>
+						<input id="appointment-name" type="text" name="name" value="" placeholder="Борода">
+					</p>
+					<p class="appointment-item">
+						<label for="appointment-phone">Телефон</label>
+						<input id="appointment-phone" type="tel" name="phone" value="" placeholder="+3 8096 153 32 12">
+					</p>
+					<button class="button" type="submit">Отправить</button>
+				</form >
+			</section>
+		</div>
 
 	</main>
 
 	<footer class="main-footer">
-		<p>
+		<p class="footer-contacts">
 			Барбершоп "Бородинский"<br>
 			Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
 			<a href="map.html">Как нас найти?</a>
 			Телефон: +7(495)666-02-66
 		</p>
+
 		<div class="footer-social">
 			<b>Давайте дружить!</b>
 			<ul>
@@ -139,7 +141,7 @@
 			</ul>
 		</div>
 		<p class="footer-copyright">
-			<b>Разработано</b>
+			<b>Разработано:</b>
 			<a class="button" href="http://htmlacademy.ru">HTML Academy</a>
 		</p>
 	</footer>
