--- a/src/barbershop-item.html
+++ b/src/barbershop-item.html
@@ -3,8 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>barbershop-item</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+
+<body class="inner-page">
 
 	<header class="main-header">
 		<nav class="main-navigation">
@@ -32,7 +36,7 @@
 		<ul class="breadcrumbs">
 			<li><a href="index.html">Главная</a></li>
 			<li><a href="catalog.html">Магазин</a></li>
-			<li><a href="#">Средства для ухода</li>
+			<li><a href="#">Средства для ухода</a></li>
 			<li class="breadcrumbs-current">Набор для путешествия «Baxter of California»</li>
 		</ul>
 
@@ -68,9 +72,9 @@
 				<li>Удобная кожаная косметичка</li>
 			</ul>
 		</section>
-	</main>
+	</main>>
 
-	<footer class="mail-footer">
+	<footer class="main-footer">
 		<p class="footer-contacts">
 			Барбершоп "Бородинский"<br>
 			Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
