--- a/src/barbershop-shop.html
+++ b/src/barbershop-shop.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Barbershop-shop</title>
+	<link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
+	<link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="inner-page">
 
 	<header class="main-header">
 		<nav class="main-navigation">
@@ -58,7 +61,7 @@
 							<label for="filter-malin-goets">Malin+Goets</label>
 						</li>
 						<li class="filter-option">
-							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murrays" id="filter-murrays">
+							<input class="visually-hidden filter-input filter-input-checkbox" type="checkbox" name="murrays" id="filter-murrays" disabled>
 							<label for="filter-murrays">Murray's</label>
 						</li>
 						<li class="filter-option">
@@ -91,7 +94,7 @@
 
 		<section class="catalog">
 			<h2 class="visually-hidden">Список средств для ухода</h2>
-			<ul class="catalog-items">
+			<ul class="catalog-list">
 				<li class="catalog-item">
 					<a href="catalog-item.html"> 
 						<h3>
