--- a/src/index.html
+++ b/src/index.html
@@ -14,18 +14,22 @@
 			<a class="main-header-logo">
 				<img src="img/index-logo.svg" width="371" height="155" alt="Логотип барбершопа Бородинский">
 			</a>
-			<ul class="site-navigation">
-				<li><a href="info.html">Информация</a></li>
-				<li><a href="news.html">Новости</a></li>
-				<li><a href="price.html">Прайс-лист</a></li>
-				<li><a href="catalog.html">Магазин</a></li>
-				<li><a href="contacts.html">Контакты</a></li>
-			</ul>
-			<ul class="user-navigation">
+			<div class="main-navigation-wrapper">
+				<div class="container">
+					<ul class="site-navigation">
+					<li><a href="info.html">Информация</a></li>
+					<li><a href="news.html">Новости</a></li>
+					<li><a href="price.html">Прайс-лист</a></li>
+					<li><a href="catalog.html">Магазин</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
+					</ul>
+					<ul class="user-navigation">
 				<li class="login-link">
 					<a class="login-link" href="login.html">Вход</a>
 				</li>
-			</ul>
+					</ul>
+				</div>
+			</div>
 		</nav>
 	</header>
 
@@ -125,25 +129,27 @@
 	</main>
 
 	<footer class="main-footer">
-		<p class="footer-contacts">
-			Барбершоп "Бородинский"<br>
-			Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
+		<div class="container">
+			<p class="footer-contacts">
+				Барбершоп "Бородинский"<br>
+				Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
 			<a href="map.html">Как нас найти?</a>
-			Телефон: +7(495)666-02-66
-		</p>
+				Телефон: +7(495)666-02-66
+			</p>
 
-		<div class="footer-social">
-			<b>Давайте дружить!</b>
-			<ul>
-				<li><a class="social-button" href="#">Вконтакте</a></li>
-				<li><a class="social-button" href="#">Фейсбук</a></li>
-				<li><a class="social-button" href="#">Инстаграм</a></li>
-			</ul>
+			<div class="footer-social">
+				<b>Давайте дружить!</b>
+				<ul>
+					<li><a class="social-button" href="#">Вконтакте</a></li>
+					<li><a class="social-button" href="#">Фейсбук</a></li>
+					<li><a class="social-button" href="#">Инстаграм</a></li>
+				</ul>
+			</div>
+				<p class="footer-copyright">
+					<b>Разработано:</b>
+				<a class="button" href="http://htmlacademy.ru">HTML Academy</a>
+				</p>
 		</div>
-		<p class="footer-copyright">
-			<b>Разработано:</b>
-			<a class="button" href="http://htmlacademy.ru">HTML Academy</a>
-		</p>
 	</footer>
 
 	<section class="modal modal-login">
