--- a/src/barbershop-item.html
+++ b/src/barbershop-item.html
@@ -15,18 +15,22 @@
 			<a class="main-header-logo" href="index.html">
 				<img src="img/logo.svg" width="111" heigh="24" alt="Логотип барбершопа Бородинский">
 			</a>
-			<ul class="site-navigation">
-				<li><a href="info.html">Информация</a></li>
-				<li><a href="news.html">Новости</a></li>
-				<li><a href="price.html">Прайс-лист</a></li>
-				<li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
-				<li><a href="contacts.html">Контакты</a></li>
-			</ul>
-			<ul class="user-navigation">
-				<li class="login-link">
-					<a class="login-link" href="login.html">Вход</a>
-				</li>
-			</ul>
+			<div class="main-navigation-wrapper">
+				<div class="container">
+					<ul class="site-navigation">
+						<li><a href="info.html">Информация</a></li>
+						<li><a href="news.html">Новости</a></li>
+						<li><a href="price.html">Прайс-лист</a></li>
+						<li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+						<li><a href="contacts.html">Контакты</a></li>
+					</ul>
+					<ul class="user-navigation">
+						<li class="login-link">
+							<a class="login-link" href="login.html">Вход</a>
+						</li>
+					</ul>
+				</div>
+			</div>
 		</nav>
 	</header>
 
@@ -72,27 +76,29 @@
 				<li>Удобная кожаная косметичка</li>
 			</ul>
 		</section>
-	</main>>
+	</main>
 
 	<footer class="main-footer">
-		<p class="footer-contacts">
-			Барбершоп "Бородинский"<br>
-			Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
-			<a href="map.html">Как нас найти?</a>
-			Телефон: +7(495)666-02-66
-		</p>
-		<div class="footer-social">
-			<b>Давайте дружить</b>
-			<ul>
-				<li><a class="social-button" href="#">Вконтакте</a></li>
-				<li><a class="social-button" href="#">Фейсбук</a></li>
-				<li><a class="social-button" href="#">Инстаграм</a></li>
-			</ul>
+		<div class="container">
+			<p class="footer-contacts">
+				Барбершоп "Бородинский"<br>
+				Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
+				<a href="map.html">Как нас найти?</a>
+				Телефон: +7(495)666-02-66
+			</p>
+			<div class="footer-social">
+				<b>Давайте дружить</b>
+				<ul>
+					<li><a class="social-button" href="#">Вконтакте</a></li>
+					<li><a class="social-button" href="#">Фейсбук</a></li>
+					<li><a class="social-button" href="#">Инстаграм</a></li>
+				</ul>
+			</div>
+			<p class="footer-copyright">
+				<b>Разработано</b>
+				<a class="button" href="http://htmlacademy.ru">HTML Academy</a>
+			</p>
 		</div>
-		<p class="footer-copyright">
-			<b>Разработано</b>
-			<a class="button" href="http://htmlacademy.ru">HTML Academy</a>
-		</p>
 	</footer>
 
 	<section class="modal modal-login">
