--- a/src/barbershop-shop.html
+++ b/src/barbershop-shop.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body class="inner-page">
 
 	<header class="main-header">
@@ -14,6 +15,8 @@
 			<a class="main-header-logo" href="index.html">
 				<img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа Бородинский">
 			</a>
+			<div class="main-navigation-wrapper">
+				<div class="container">
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="news.html">Новости</a></li>
@@ -26,6 +29,8 @@
 					<a class="login-link" href="login.html">Вход</a>
 				</li>
 			</ul>
+		</div>
+	</div>
 		</nav>
 	</header>
 
