--- a/src/barbershop-shop.html
+++ b/src/barbershop-shop.html
@@ -12,11 +12,12 @@
 
 	<header class="main-header">
 		<nav class="main-navigation">
+			
 			<a class="main-header-logo" href="index.html">
 				<img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа Бородинский">
 			</a>
-			<div class="main-navigation-wrapper">
-				<div class="container">
+			
+				
 			<ul class="site-navigation">
 				<li><a href="info.html">Информация</a></li>
 				<li><a href="news.html">Новости</a></li>
@@ -29,8 +30,8 @@
 					<a class="login-link" href="login.html">Вход</a>
 				</li>
 			</ul>
-		</div>
-	</div>
+		
+	
 		</nav>
 	</header>
 
@@ -42,7 +43,8 @@
 			<li><a href="catalog.html">Магазин</a></li>
 			<li class="breadcrumbs-current">Средства для ухода</li>
 		</ul>
-
+		
+		<div class="catalog-colums">
 		<section class="filters">
 			<h2 class="visually-hidden">Фильтр товаров</h2>
 			<form class="filter" method="get" action="https://echo.htmlacademy.ru">
@@ -114,6 +116,7 @@
 					<p class="catalog-item-price">
 						<b>2 900 &#8381;</b>
 						<a class="button" href="#">Купить</a>
+					</p>
 				</li>
 
 				<li class="catalog-item">
@@ -200,6 +203,8 @@
 					</p>
 				</li>
 			</ul>
+		</p>
+
 
 			<ul class="pagination-list">
 				<li class="pagination-item"><a href="#">1</a></li>
@@ -208,6 +213,7 @@
 				<li class="pagination-item"><a href="#">4</a></li>
 			</ul>
 		</section>
+	</div>
 	</main>
 	
 		<footer class="main-footer">
