styles add to all pages

--- a/src/barbershop-shop.html
+++ b/src/barbershop-shop.html
@@ -203,9 +203,7 @@
 					</p>
 				</li>
 			</ul>
-		</p>
-
-
+		
 			<ul class="pagination-list">
 				<li class="pagination-item"><a href="#">1</a></li>
 				<li class="pagination-item pagination-item-current"><a>2</a></li>
@@ -217,7 +215,8 @@
 	</main>
 	
 		<footer class="main-footer">
-		<p>
+			<div class="container">
+		<p  class="footer-contacts">
 			Барбершоп "Бородинский"<br>
 			Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
 			<a href="map.html">Как нас найти?</a>
@@ -235,6 +234,7 @@
 			<b>Разработано</b>
 			<a class="button" href="http://htmlacademy.ru">HTML Academy</a>
 		</p>
+	</div>
 	</footer>
 
 	<section class="modal modal-login">
