--- a/src/barbershop-item.html
+++ b/src/barbershop-item.html
@@ -11,25 +11,22 @@
 <body class="inner-page">
 
 	<header class="main-header">
-		<nav class="main-navigation">
-
+		<nav class="main-navigation container">
 			<a class="main-header-logo" href="index.html">
 				<img src="img/logo.svg" width="111" heigh="24" alt="Логотип барбершопа Бородинский">
 			</a>
-			
-
-					<ul class="site-navigation">
-						<li><a href="info.html">Информация</a></li>
-						<li><a href="news.html">Новости</a></li>
-						<li><a href="price.html">Прайс-лист</a></li>
-						<li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
-						<li><a href="contacts.html">Контакты</a></li>
-					</ul>
-					<ul class="user-navigation">
-						<li class="login-link">
-							<a class="login-link" href="login.html">Вход</a>
-						</li>
-					</ul>
+				<ul class="site-navigation">
+					<li><a href="info.html">Информация</a></li>
+					<li><a href="news.html">Новости</a></li>
+					<li><a href="price.html">Прайс-лист</a></li>
+					<li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+					<li><a href="contacts.html">Контакты</a></li>
+				</ul>
+				<ul class="user-navigation">
+					<li>
+						<a class="login-link" href="login.html">Вход</a>
+					</li>
+				</ul>
 
 			
 		</nav>
