--- a/src/index.html
+++ b/src/index.html
@@ -135,7 +135,7 @@
 			<p class="footer-contacts">
 				Барбершоп "Бородинский"<br>
 				Адрес: г.Санкт-Петербург, ул. Б.Конюшенная, д.19/8<br>
-			<a href="map.html">Как нас найти?</a>
+			<a href="map.html">Как нас найти?</a><br>
 				Телефон: +7(495)666-02-66
 			</p>
 
