--- a/src/index.html
+++ b/src/index.html
@@ -166,15 +166,14 @@
 	<section class="modal modal-login">
 		<h2>Личный кабинет</h2>
 		<p class="modal-description">Введите пожалуйста свой логин и пароль</p>
-
 		<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 			<p>
 		 		<label class="visually-hidden" for="user-login">Логин</label>
-		 			<input class="login-icon-user" id="user-login" type="text" name="login" placeholder="Логин">
+		 			<input class="login-icon-user" id="user-login" type="text" name="login" placeholder="Логин" required>
 		 	</p>
 		 	<p>
 		 		<label class="visually-hidden" for="user-password">Пароль</label>
-		 			<input class="login-icon-password" id="user-password" type="password" name="password" placeholder="Пароль">
+		 			<input class="login-icon-password" id="user-password" type="password" name="password" placeholder="Пароль" required>
 		 	</p>
 		 	<p class="login-help">
 		 		<label class="login-checkbox">
@@ -197,5 +196,6 @@
 		<button class="modal-close" type="button">Закрыть</button>
 	</section>
 	<div class="modal-overlay"></div>
+	<script src="js/barber.js" type="text/javascript"></script>
 </body>
 </html>
