--- a/src/index.html
+++ b/src/index.html
@@ -169,11 +169,11 @@
 		<form class="login-form" action="https://echo.htmlacademy.ru" method="post">
 			<p>
 		 		<label class="visually-hidden" for="user-login">Логин</label>
-		 			<input class="login-icon-user" id="user-login" type="text" name="login" placeholder="Логин" required>
+		 			<input class="login-icon-user" id="user-login" type="text" name="login" placeholder="Логин">
 		 	</p>
 		 	<p>
 		 		<label class="visually-hidden" for="user-password">Пароль</label>
-		 			<input class="login-icon-password" id="user-password" type="password" name="password" placeholder="Пароль" required>
+		 			<input class="login-icon-password" id="user-password" type="password" name="password" placeholder="Пароль">
 		 	</p>
 		 	<p class="login-help">
 		 		<label class="login-checkbox">
@@ -192,7 +192,7 @@
 		<h2 class="visually-hidden"> Как до нас добраться</h2>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.4705430698077!2d30.519777999221944!3d50.450961903360884!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce508efa6ac3%3A0x836b2ba6efc8a00f!2z0L_QtdGALiDQotCw0YDQsNGB0LAg0KjQtdCy0YfQtdC90LrQviwgMywg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1581258301523!5m2!1sru!2sua" width="766" height="560" allowfullscreen=""></iframe>
 		
-		<button class="modal-close" type="button">Закрыть</button>
+		<button class="modal-close j-modal-close" type="button">Закрыть</button>
 	</section>
 	<div class="modal-overlay"></div>
 
